# 2022_Dacon_Landmark

./: .gitignore  Sample.csv  configure.yaml  inference.py  pyproject.toml  readme.md  total_process.ipynb  training.py
src/: calculate.py  dataloader.py  resnet50.py  set_seed.py  trainer.py  transforms.py
